@@ -1,3 +1,6 @@
+2006-07-12 Add support to render the scientific notation label
+           over the right-side y-axis - DSD
+
 ===============================================================
 2006-07-11 Released 0.87.4 at revision 2558
 
